src/client/components/Tabbed/Tabbed.less
/*
 * pwix:tabbed/src/client/stylesheets/Tabbed.less
 */

.tabbed-template {
    height: 100%;

    // navs and panes
    // have panes 100% height of the visual parent
    .tabbed-consistent-height {
        height: 100%;
        display: flex;
        flex-direction: column;

        .tabbed-panes-encloser {
            height: 100%;
            display: flex;
            flex-direction: column;

            .tabbed-panes {
                height: 100%;
                display: flex;
                flex-direction: column;

                .tab-content {
                    height: 100%;
                    display: flex;
                    //flex-direction: column;

                    .tab-pane {
                        height: 100%;
                        margin-top: 0.5em;
                    }
                }
            }
        }
    }

    // have a consistent height between the tabs
    // https://stackoverflow.com/questions/54810478/bootstrap-4-how-to-equal-height-two-tab-panes
    // and https://observablehq.com/@rkaravia/css-trick-tabs-with-consistent-height
    .tabbed-consistent-height > .tabbed-panes-encloser > .tabbed-panes > .tab-content > .tab-pane {
        display: block; // undo "display: none;"
        visibility: hidden;
        margin-right: -100%;
        width: 100%;
    }
    .tabbed-consistent-height > .tabbed-panes-encloser > .tabbed-panes > .tab-content > .active {
        visibility: visible;
    }

    .nav-left.noborder {
        border: 0;
        .nav-link.active {
            border: 0;
        }
        .nav-link:hover {
            border-color: transparent;
        }
    }
    // when we want have tabs on the bottom of the panel
    .nav-bottom {
        border-bottom: 0;
        border-top: var( --bs-nav-tabs-border-width ) solid lightgray;
        .nav-link {
            --bs-nav-tabs-link-active-border-color: #ffffff lightgray lightgray lightgray;
            border-top-left-radius: 0;
            border-top-right-radius: 0;
            border-bottom-left-radius: 0.5em;
            border-bottom-right-radius: 0.5em;
        }
    }
    .tabbed-consistent-width {
        height: 100%;
        display: flex;
        flex-direction: row;
    }
    .tabbed-consistent-width > .tabbed-navs-encloser > .tabbed-navs > ul {
        display: flex;
        flex-direction: column;
        .nav-item {
            white-space: nowrap;
            margin-right: 0.5em;
        }
    }
    // https://stackoverflow.com/questions/36230944/prevent-flex-items-from-overflowing-a-container
    .tabbed-consistent-width > .tabbed-panes-encloser {
        min-width: 0;
        flex-grow: 1;
        display: flex;
        flex-direction: column;
    }
    .tabbed-consistent-width > .tabbed-panes-encloser > .tabbed-panes {
        flex-grow: 1;
    }
    .tabbed-consistent-width > .tabbed-panes-encloser > .tabbed-panes > .tab-content {
        height: 100%;
    }
    .tabbed-consistent-width > .tabbed-panes-encloser > .tabbed-panes > .tab-content > .tab-pane {
        height: 100%;
    }
    // have some space between tabs and panes
    .tabbed-navs {
        .nav-top {
            margin-bottom: 0.5em;
        }
        .nav-bottom {

        }
        .nav-left {

        }
        .nav-right {

        }
    }
}

